    - Do not log introduction points for hidden services if SafeLogging
      is set.
    - Clients do not store bandwidth history in their state files. (This
      shouldn't be an exploitable security issue, but it's better to be
      safe.)
    - When generating bandwidth history, round down to the nearest
      1k. When storing accounting data, round up to the nearest 1k.

  o Controller features:
    - Have GETINFO dir/status/* work on hosts with DirPort disabled.
    - Reimplement GETINFO so that info/names stays in sync with the
      actual keys.

  o Controller bugfixes:
    - Report the circuit number correctly in STREAM CLOSED events. (Bug
      reported by Mike Perry.)
    - Do not report bizarre values for results of accounting GETINFOs
      when the last second's write or read exceeds the alloted bandwidth.
      (Bug 329.)


Changes in version 0.1.2.4-alpha - 2006-12-03
  o Major features:
    - Add support for using natd; this allows FreeBSDs earlier than
      5.1.2 to have ipfw send connections through Tor without using
      SOCKS. (Patch from Zajcev Evgeny with tweaks from tup.)

  o Minor features:
    - Make all connections to addresses of the form ".noconnect"
      immediately get closed. This lets application/controller combos
      successfully test whether they're talking to the same Tor by
      watching for STREAM events.
    - Make cross.sh cross-compilation script work even when autogen.sh
      hasn't been run. (Patch from Michael Mohr.)
    - Statistics dumped by -USR2 now include a breakdown of public key
      operations, for profiling.

  o Major bugfixes:
    - Fix a major leak when directory authorities parse their
      approved-routers list, a minor memory leak when we fail to pick
      an exit node, and a few rare leaks on errors.
    - Handle TransPort connections even when the server sends data before
      the client sends data. Previously, the connection would just hang